--- a/start.html
+++ b/start.html
@@ -28,7 +28,7 @@
                     <a href="" class="btn btn-block btn-lg btn-black ">LOGOWANIE <i class="icon-transfer-right"></i></a>
                 </div>
                 <div class="col-md-5 col-md-4 col-xxl-3 mb-20">
-                    <a href="" class="btn btn-block btn-lg btn-outline-black">REJESTRACJA <i class="icon-transfer-right"></i></a>
+                    <a href="" class="btn btn-block btn-lg btn-black">REJESTRACJA <i class="icon-transfer-right"></i></a>
                 </div>
             </div>
 
