--- a/index7.html
+++ b/index7.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900&display=swap&subset=latin-ext" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/app.min.css">
@@ -100,14 +101,13 @@
             </ul>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="pane1" role="tabpanel" aria-labelledby="pane1-tab">
-                    <div class="table-responsive mb-20">
-                        <table class="table table-price-list table-striped">
+                    <div class="table-responsive-sm mb-20">
+                        <table class="table table-price-list table-striped" id="price-table-1">
                             <thead>
                             <tr>
                                 <th>
                                 <span>
-                                    <span class="th-label">Model</span>
-                                    <span class="td-label">Obicie</span>
+                                    Obicie
                                 </span>
                                 </th>
                                 <th>126</th>
@@ -124,77 +124,76 @@
                             <tbody>
                             <tr>
                                 <th>adore</th>
+                                <td>15,51</td>
+                                <td>17,53</td>
+                                <td>15,57</td>
                                 <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
+                                <td>15,69</td>
+                                <td>12,50</td>
+                                <td>15,30</td>
+                                <td>14,10</td>
+                                <td>16,90</td>
                             </tr>
                             <tr>
                                 <th>amarillo</th>
                                 <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
+                                <td>15,69</td>
+                                <td>12,50</td>
+                                <td>15,30</td>
+                                <td>15,69</td>
+                                <td>12,50</td>
+                                <td>15,30</td>
+                                <td>14,10</td>
+                                <td>16,90</td>
                             </tr>
                             <tr>
                                 <th>board</th>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
+                                <td>15,51</td>
+                                <td>17,53</td>
+                                <td>15,57</td>
+                                <td>15,30</td>
+                                <td>15,69</td>
+                                <td>12,50</td>
+                                <td>15,30</td>
+                                <td>14,10</td>
+                                <td>16,90</td>
                             </tr>
                             <tr>
                                 <th>break</th>
                                 <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
+                                <td>15,69</td>
+                                <td>15,51</td>
+                                <td>17,53</td>
+                                <td>15,57</td>
+                                <td>12,50</td>
+                                <td>15,30</td>
+                                <td>14,10</td>
+                                <td>16,90</td>
                             </tr>
                             <tr>
                                 <th>bull</th>
                                 <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
-                                <td>15,50</td>
+                                <td>15,69</td>
+                                <td>12,50</td>
+                                <td>15,30</td>
+                                <td>15,69</td>
+                                <td>15,51</td>
+                                <td>17,53</td>
+                                <td>15,57</td>
+                                <td>16,90</td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="tab-pane fade" id="pane2" role="tabpanel" aria-labelledby="pane2-tab">
-                    <div class="table-responsive mb-20">
-                        <table class="table table-price-list table-striped">
+                    <div class="table-responsive-sm mb-20">
+                        <table class="table table-price-list table-striped" id="price-table-2">
                             <thead>
                             <tr>
                                 <th>
                                 <span>
-                                    <span class="th-label">Model</span>
-                                    <span class="td-label">Obicie</span>
+                                    Obicie
                                 </span>
                                 </th>
                                 <th>126</th>
@@ -274,14 +273,13 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="pane3" role="tabpanel" aria-labelledby="pane3-tab">
-                    <div class="table-responsive mb-20">
-                        <table class="table table-price-list table-striped">
+                    <div class="table-responsive-sm mb-20">
+                        <table class="table table-price-list table-striped" id="price-table-3">
                             <thead>
                             <tr>
                                 <th>
                                 <span>
-                                    <span class="th-label">Model</span>
-                                    <span class="td-label">Obicie</span>
+                                    Obicie
                                 </span>
                                 </th>
                                 <th>126</th>
@@ -501,7 +499,29 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
+
+
+
+    <script>
+
+        $(function() {
+
+            $('#price-table-1, #price-table-2, #price-table-3').DataTable({
+                "lengthChange": false,
+                "ordering": true,
+                "info": false,
+                "paging": false,
+                "searching": true,
+            });
+
+        });
+
+
+
+    </script>
+
 
 </body>
 </html>
