--- a/index4.html
+++ b/index4.html
@@ -20,7 +20,7 @@
     <header>
         <div class="container">
 
-            <nav class="navbar navbar-expand-md">
+            <nav class="navbar navbar-expand-lg">
 
                 <a class="navbar-brand" href="#">
                     <img src="images/polset-logo-white.svg" alt="sklep polset">
@@ -51,6 +51,16 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-outline-white" href="#">WYLOGUJ</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img src="./images/PL.svg" /> PL
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="#"><img src="./images/EN.svg" /> <span>EN</span></a>
+                                <a class="dropdown-item" href="#"><img src="./images/RU.svg" /> <span>RU</span></a>
+                                <a class="dropdown-item" href="#"><img src="./images/UA.svg" /> <span>UA</span></a>
+                            </div>
                         </li>
                     </ul>
                 </div>
