--- a/index7.html
+++ b/index7.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container">
 
-            <nav class="navbar navbar-expand-md">
+            <nav class="navbar navbar-expand-lg">
 
                 <a class="navbar-brand" href="#">
                     <img src="images/polset-logo-white.svg" alt="sklep polset">
